[Anmol Singh]HomeVC: WebView assigned in About Us!

--- a/Group4_FinalProject_MAD3115W2020/Storyboards/Base.lproj/Main.storyboard
+++ b/Group4_FinalProject_MAD3115W2020/Storyboards/Base.lproj/Main.storyboard
@@ -934,7 +934,7 @@
                                     <color key="titleColor" red="0.088881986590000003" green="0.21694519349999999" blue="0.26583433969999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
-                                    <segue destination="eEx-Nw-hHh" kind="show" id="XF8-Mt-YTo"/>
+                                    <segue destination="eEx-Nw-hHh" kind="show" id="FmT-Gm-ps5"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dXW-e3-0CK">
