--- a/Group4_FinalProject_MAD3115W2020/Storyboards/Base.lproj/Main.storyboard
+++ b/Group4_FinalProject_MAD3115W2020/Storyboards/Base.lproj/Main.storyboard
@@ -943,6 +943,9 @@
                                 <state key="normal" title="Contact Us">
                                     <color key="titleColor" red="0.088881986590000003" green="0.21694519349999999" blue="0.26583433969999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
+                                <connections>
+                                    <action selector="iContactUs:" destination="Ltt-Mg-a8c" eventType="touchUpInside" id="PWJ-Zd-ACX"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
